RESOLVED FIXED60927
fastCheckSelector() does not inline correctly in all cases
https://bugs.webkit.org/show_bug.cgi?id=60927
Summary fastCheckSelector() does not inline correctly in all cases
Antti Koivisto
Reported 2011-05-16 15:23:02 PDT
It should use anonymous namespace and functions as template arguments.
Attachments
patch (5.00 KB, patch)
2011-05-16 15:26 PDT, Antti Koivisto
ddkilzer: review+
Antti Koivisto
Comment 1 2011-05-16 15:26:53 PDT
Antti Koivisto
Comment 2 2011-05-16 15:31:26 PDT
David Kilzer (:ddkilzer)
Comment 3 2011-05-16 16:15:36 PDT
Comment on attachment 93705 [details] patch r=me
Antti Koivisto
Comment 4 2011-05-16 16:40:16 PDT
Note You need to log in before you can comment on or make changes to this bug.