https://bugs.webkit.org/show_bug.cgi?id=60927 fastCheckSelector() does not inline correctly in all cases

Reviewed by Dave Kilzer.

Use anonymous namespace instead of static qualifier to get internal linkage.
Use functions as template arguments instead of classes.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::SelectorChecker::fastCheckSelector):



Canonical link: https://commits.webkit.org/76285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86635 268f45cc-cd09-0410-ab3c-d52691b4dbfc